fix z-index

--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -16,7 +16,7 @@
     background-color: var(--color-light);
     font-size: 20px;
     transition-duration: var(--transition-duration);
-    z-index: 1;
+    z-index: 10;
   }
 
   @include mobile {
